channel_list and message_list selectedChannel working

--- a/app/assets/stylesheets/components/_chat.scss
+++ b/app/assets/stylesheets/components/_chat.scss
@@ -45,14 +45,15 @@ body {
   -webkit-padding-start: 0px;
 }
 
-.channels-container > ul > li {
+.channels-container > ul > a {
   margin: 10px 0;
   font-size: 14px;
   color: #7c7c7c;
+  text-decoration: none;
   cursor: pointer;
 }
 
-.channels-container > ul > li.active {
+.channels-container > ul > a.active {
   font-weight: 600;
   color: black
 }
