--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -1,4 +1,7 @@
-<div id="chat_app"></div>
+<div
+  id="chat_app"
+  data-channels="<%= @channels.map { |channel| channel.name }.to_json %>"
+></div>
 
 <% content_for :after_js do %>
   <%= javascript_pack_tag "chat" %>
